--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "sqlalchemy (>=2.0.38,<3.0.0)",
     "mysqlclient (>=2.2.7,<3.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
-    "dependency-injector (>=4.45.0,<5.0.0)"
+    "dependency-injector (>=4.45.0,<5.0.0)",
+    "pydantic[email] (>=2.10.6,<3.0.0)"
 ]
 
 [tool.poetry]
