--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,11 @@ dependencies = [
     "mysqlclient (>=2.2.7,<3.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
     "dependency-injector (>=4.45.0,<5.0.0)",
-    "pydantic[email] (>=2.10.6,<3.0.0)"
+    "pydantic[email] (>=2.10.6,<3.0.0)",
+    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "pydantic-settings (>=2.8.0,<3.0.0)"
 ]
 
 [tool.poetry]
