--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "pydantic-settings (>=2.8.0,<3.0.0)",
-    "celery (>=5.4.0,<6.0.0)"
+    "celery (>=5.4.0,<6.0.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 
 [tool.poetry]
